--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "keywords": [
     "php",
+    "swoole",
     "laravel",
     "kafka"
   ],
@@ -15,9 +16,10 @@
   ],
   "require": {
     "php": ">=8.0",
-    "peibin/laravel-coordinator": "^1.0",
-    "peibin/laravel-process": "^1.2",
-    "peibin/laravel-provider-config": "^1.0"
+    "peibin/laravel-coordinator": "^2.0",
+    "peibin/laravel-coroutine": "^1.0",
+    "peibin/laravel-engine": "^1.0",
+    "peibin/laravel-process": "^2.0"
   },
   "autoload": {
     "psr-4": {
